# juce8-cmake-vscode-template

./: .gitmodules  CMakeLists.txt  README.md
src/: PluginEditor.cpp
